--- a/src/translation/is.json
+++ b/src/translation/is.json
@@ -5,7 +5,7 @@
   },
   "greeting": {
     "title": "Hæ! Ég heiti Jónas Helgi",
-    "text": "Ég sérhæfi mig í vefhönnun, þróun og forritun á vefsíðum. Ég starfa sem hugbúnaðarsérfræðingur hjá Advania. Ég legg mikið upp úr því að öll mín viðmót og allar mínar vefsíður líta vel út á sama hvaða græju þau eru skoðuð.",
+    "text": "Ég sérhæfi mig í vefhönnun, þróun og forritun á vefsíðum. Ég er hugbúnaðarsérfræðingur hjá einu stærsta upplýsingatækni/tæknifyrirtæki á Íslandi, Advania. Ég legg mikið upp úr því að öll mín viðmót og allar mínar vefsíður líta vel út á sama hvaða tæki þau eru skoðuð á.",
     "currentlyUsing": "Það sem ég er helst að nota:"
   },
   "projects": {
