Change layout and improved site responsiveness

--- a/src/translation/en.json
+++ b/src/translation/en.json
@@ -1,4 +1,11 @@
 {
+  "header": {
+    "menu": {
+      "contact": "Contact",
+      "language": "Language",
+      "information": "Information"
+    }
+  },
   "addition": {
     "courses": "Courses",
     "books": "Books"
