Changed text inside menu

--- a/src/translation/en.json
+++ b/src/translation/en.json
@@ -42,7 +42,7 @@
   },
   "navigation": {
     "language": "is",
-    "addition": "Additions",
-    "projects": "Projects"
+    "courses": "Courses",
+    "books": "Books"
   }
 }
