--- a/src/translation/is.json
+++ b/src/translation/is.json
@@ -42,7 +42,7 @@
   },
   "navigation": {
     "language": "en",
-    "addition": "Viðbót",
-    "projects": "Verkefni"
+    "courses": "Námskeið",
+    "books": "Bækur"
   }
 }
