Changed main greeting title and scoll places

--- a/src/translation/en.json
+++ b/src/translation/en.json
@@ -12,7 +12,7 @@
   },
   "greeting": {
     "title": "Hi! My name is Jónas Helgi",
-    "text": "I specialize in web design and web development. I currently work as a software specialist at one the largest IT/tech companies in Iceland, Advania. I make sure that all my interfaces and all my websites look good no matter what device they are viewed on.",
+    "text": "I am a frontend developer who loves creating beautiful and user-friendly websites. I put great emphasis on ensuring that all my interfaces and websites look good on any device they are viewed on. I have a strong passion for learning new things and love tackling challenging projects. When I'm not programming, you can find me in the kitchen cooking delicious meals or playing board games with friends.",
     "currentlyUsing": "What I am currently using"
   },
   "projects": {
