--- a/src/translation/is.json
+++ b/src/translation/is.json
@@ -12,7 +12,7 @@
   },
   "greeting": {
     "title": "Hæ! Ég heiti Jónas Helgi",
-    "text": "Ég sérhæfi mig í vefhönnun, þróun og forritun á vefsíðum. Ég er hugbúnaðarsérfræðingur hjá einu stærsta upplýsingatækni/tæknifyrirtæki á Íslandi, Advania. Ég legg mikið upp úr því að öll mín viðmót og allar mínar vefsíður líta vel út á sama hvaða tæki þau eru skoðuð á.",
+    "text": "Ég er framendaforritari sem elskar að búa til flottar og notendavænar vefsíður. Ég legg mikið upp úr því að öll mín viðmót og allar mínar vefsíður líta vel út á sama hvaða tæki þau eru skoðuð á. Ég hef mikla ástríðu fyrir að læra nýja hluti og elska að takast á við krefjandi verkefni. Þegar ég er ekki að forrita þá getur þú fundið mig í eldhúsinu að elda góðan mat eða spila borðspil með vinum.",
     "currentlyUsing": "Það sem ég er helst að nota:"
   },
   "projects": {
